unpackaged/main/default/objects/Potential_Matching_From_Screener__c/Potential_Matching_From_Screener__c.object-meta.xml
<CustomObject>
    <description>This join object will hold the student’s application and the engagement information. The object will hold those engagements the student is asking to be considered for, after selecting the “Consider Me” button next to the engagement on the student portal. EDF staff will also use this object as a result of the matching process initiated by an EDF staff person from the student application or engagement record.</description>
    <label>Consider Me- Fellow Portal</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>PE Match #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consider Me- Fellow Portals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>