unpackaged/main/default/objects/Potential_Matching_From_Screener__c/fields/Change_Agent_Score__c.field-meta.xml
<CustomField>
    <fullName>Change_Agent_Score__c</fullName>
    <formula>Student_Application__r.Change_Agent_Score_old__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Score Criteria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>