unpackaged/main/default/objects/Potential_Matching_From_Screener__c/fields/Engagement_Available__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Available__c</fullName>
    <formula>CASE(TEXT(Engagement__r.Stage__c),
'Confirmed Participation', 1,
'Match Conversation Complete', 1,
'Onboarding Conversation Not Accepted', 1,
0) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Available?</label>
    <type>Checkbox</type>
</CustomField>