unpackaged/main/default/objects/Potential_Matching_From_Screener__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Tracks various status of Consider Me from Fellow Portal</description>
    <inlineHelpText>Bookmarked = Bookmarked only with no comments
Ranked = Ranked only with no comments
Not Submitted = Added comments but not submitted
Submitted = Submitted
Archived = Original submission</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bookmarked</fullName>
            </value>
            <value>
                <fullName>Ranked</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
                <isActive>false</isActive>
                <label>Interested</label>
            </value>
            <value>
                <fullName>Top 5 - Submitted</fullName>
                <isActive>false</isActive>
                <label>Top 5 - Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>