unpackaged/main/default/objects/Potential_Matching_From_Screener__c/fields/Student_Application__c.field-meta.xml
<CustomField>
    <fullName>Student_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Application</label>
    <referenceTo>Fellow_Application__c</referenceTo>
    <relationshipName>Potential_Matching_From_Screeners</relationshipName>
    <type>Lookup</type>
</CustomField>